# bazel-ros-example

./: LICENSE  MODULE.bazel  README.md
.devcontainer/: Dockerfile  devcontainer.json
chatter/: BUILD.bazel  listener.py  talker.cc
chatter/launch/: chatter.launch
