load(
    "@com_github_mvukov_rules_ros//ros:interfaces.bzl",
    "ros_interface_library",
    "cc_ros_interface_library",
    "py_ros_interface_library",
)

load(
    "@com_github_mvukov_rules_ros//ros:cc_defs.bzl", 
    "cc_ros_binary"
)

load(
    "@com_github_mvukov_rules_ros//ros:launch.bzl", 
    "ros_launch"
)

ros_interface_library(
    name = "example_msgs",
    srcs = ["msg/Example.msg"],
    deps = ["@ros_std_msgs//:std_msgs"],
)

cc_ros_interface_library(
    name = "cc_example_msgs",
    visibility = ["//visibility:public"],
    deps = [":example_msgs"],
)

py_ros_interface_library(
    name = "py_example_msgs",
    visibility = ["//visibility:public"],
    deps = [":example_msgs"],
)

cc_ros_binary(
    name = "talker",
    srcs = [
        "talker.cc",
    ],
    deps = [
        ":cc_example_msgs",
        "@ros_comm//:roscpp_lib",
    ],
)

cc_ros_binary(
    name = "listener",
    srcs = [
        "listener.cc",
    ],
    deps = [
        ":cc_example_msgs",
        "@ros_comm//:roscpp_lib",
    ],
)

py_binary(
    name = "py_listener",
    srcs = ["listener.py"],
    main = "listener.py",
    deps = [
        ":py_example_msgs",
        "@ros_comm//:rospy",
    ],
)

ros_launch(
    name = "chatter",
    launch_files = ["launch/chatter.launch"],
    nodes = [
        ":talker",
        ":listener",
        ":py_listener",
    ]
)
